2012-05-26  Albert Chu <chu11@llnl.gov>

	* bmc-config/, ipmi-pef-config/, ipmi-sensors-config/,
	ipmi-chassis-config/: Fix bug in which cipher suite ID input was
	not allowed.

	* man/manpage-common-sdr-options.man: Add extra info for
	sdr-cache-file option.

2012-05-26  Albert Chu <chu11@llnl.gov>

	* ipmi-pet/ipmi-pet-argp.c: Fix argp output, ipmi-pet does not
	take hostranged arguments.

	* common/toolcommon/tool-cmdline-common.h: Code cleanup.

2012-05-25  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sensor-common.h,
	common/toolcommon/tool-sensor-common.c (valid_sensor_types):
	Remove unused parameters.

	* ipmi-sensors/, ipmi-sel/: Update for changes.

	* ipmi-pet/ipmi-pet.c (_ipmi_pet): Destroy interpret_ctx during
	cleanup.
	
2012-05-24  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sensor-common.h,
	common/toolcommon/tool-sensor-common.c (parse_sensor_types): New
	common function.

	* ipmi-sensors/, ipmi-sel/: Use common function appropriately.

	* common/toolcommon/tool-event-common.h,
	common/toolcommon/tool-event-common.c (event_data_info): Remove
	function.

	* ipmi-sel/: Update for changes.
	
2012-05-24  Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/: Support entity sensor names flags.

	* contrib/libipmimonitoring/: Update with new flags options.

	* libfreeipmi/sdr/: Support stack of saving offsets when calls to
	ipmi_sdr_cache_iterate are made.

2012-05-24  Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/ipmi_monitoring.h.in: Fix bug in
	ASSUME_BMC_OWNER bitmask.
	
2012-05-24  Albert Chu <chu11@llnl.gov>

	* Deprecate use of --skip-checks in ipmi-fru in favor of
	"skipchecks" workaround flag.

	* Deprecate use of --assume-system-event-records in ipmi-sel in
	favor of "assumesystemevent" workaround flag.

2012-05-23  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/sel/ipmi-sel.h,
	libfreeipmi/sel/ipmi-sel.c (ipmi_sel_ctx_set_parameter,
	ipmi_sel_ctx_get_parameter): New functions.
