@@ -64,7 +64,6 @@ static struct argp_option cmdline_options[] =
     ARGP_COMMON_OPTIONS_CONFIG_FILE,
     ARGP_COMMON_OPTIONS_WORKAROUND_FLAGS,
     ARGP_COMMON_SDR_OPTIONS,
-    ARGP_COMMON_SDR_DIRECTORY_OPTIONS,
     ARGP_COMMON_HOSTRANGED_OPTIONS,
     ARGP_COMMON_OPTIONS_DEBUG,
     CONFIG_ARGP_COMMON_OPTIONS,
