@@ -76,7 +76,6 @@ See GENERAL USE below for a description on how most will want to use
 #include <@top_srcdir@/man/manpage-common-config-tool-options-verbose.man>
 #include <@top_srcdir@/man/manpage-common-config-tool-options-very-verbose.man>
 #include <@top_srcdir@/man/manpage-common-sdr-options.man>
-#include <@top_srcdir@/man/manpage-common-sdr-directory-options.man>
 #include <@top_srcdir@/man/manpage-common-hostranged-options-header.man>
 #include <@top_srcdir@/man/manpage-common-hostranged-buffer.man>
 #include <@top_srcdir@/man/manpage-common-hostranged-consolidate.man>
