@@ -7,6 +7,9 @@
 	* man/manpage-common-sdr-options.man: Add extra info for
 	sdr-cache-file option.
 
+	* common/toolcommon/, man/: Undo split of SDR option
+	"sdr-cache-directory" into separate macro/man option.
+
 2012-05-26  Albert Chu <chu11@llnl.gov>
 
 	* ipmi-pet/ipmi-pet-argp.c: Fix argp output, ipmi-pet does not
